* `Fingerprint::FlagChanged` (PR#155)
* `Fingerprint::MergeCorrected` (PR#157)
* `Marc::FilterRecords::ById` (PR#138)
* `Marc::FilterRecords::WithLambda` (PR#138)
* `Marc::ExtractMeetingNameData` (PR#164)
* `Marc::ExtractOrgNameData` (PR#137)
* `Marc::ExtractPersonNameData` (PR#137)
* `Marc::ExtractNameData` (PR#137)
* `Marc::ExtractSubfieldsFromField` (PR#141)
* `Sort::ByFieldValue` (PR#151)
* `Split::PublicationStatement` transform (PR#142)

.New `Transforms::Helpers`
* `OrgNameChecker` (PR#148)
* `PersonNameChecker`(PR#161)

.New params/options
* `CombineValues::FromFieldWithDelimiter` can now take `sources: :all`, and will provide space as a default `delim` if not provided  (PR#147)
* `CombineValues::FromFieldWithDelimiter` can now take `delete_sources` and `prepend_source_field_name` args (PR#147)
* `:mode` parameter added to `Jobs::BaseJob` (PR#154, PR#157)

.Other
* Utility classes to clean ISBD trailing punctuation from name and role term values extracted from MARC data (PR#141)
* `Kiba::Extend::Job.output?` convenience method (PR#150)
* Job duration report (added to normal and verbose job run) (PR#154, PR#157)

=== Changed
* Transforms that take an `action` argument now mix in the new `ActionArgumentable` module and validate the argument values in a consistent way (PR#138)
* Name and role term values extracted from MARC data by subclasses of `Transforms::Marc::ExtractBaseNameData` are run through `Utils::MarcNameCleaner` and `Utils::MarcRoleTermCleaner` (PR#141)
* `Fingerprint::Add` now passes in default delim: U+241F / E2 90 9F / Symbol for Unit Separator (PR#155)
* `Fingerprint::Decode` now passes in default delim (U+241F / E2 90 9F / Symbol for Unit Separator), and default prefix (fp) (PR#155)

=== Bugfixes
* Fixes https://github.com/lyrasis/kiba-extend/issues/146[#46 - CombineValues::FullRecord with multi-sources can result in different values] (PR#147)